--- a/index.html
+++ b/index.html
@@ -25,8 +25,27 @@
     <br><br>
     <h3 id="status" class="btn btn-warning"></h3>
     <br><br>
+    <button class="btn btn-warning" onclick="restart()" id="restart">Restart</button>
     <div id="canvas"></div>
+    <div class="copy_right_footer">
+      Developed by - Karthik Redyshetty
+    </div>
+    <div id="myModal" class="modal fade ">
+        <div class="modal-dialog" >
+          <div class="modal-content">
+            <div class="modal-header">
+              <button class="close" data-dismiss="modal">&times;</button>
+              <h4>Instructions</h4>
+            </div>
+            <div class="modal-body">
+                <ol>To Play The Game, You Have to Hit the Ball with Your Game Console </ol>
+            </div>
+          </div>
+        </div>
+      </div>
+  
 </center>
+
         <script src="main.js"></script>
     </body>
 </html>
