--- a/index.html
+++ b/index.html
@@ -38,7 +38,11 @@
               <h4>Instructions</h4>
             </div>
             <div class="modal-body">
-                <ol>To Play The Game, You Have to Hit the Ball with Your Game Console </ol>
+                <ol><li>To Play The Game, Keep Your Laptop Straight.</li>
+                  <li> Next Sit 3-4 Feet Away From The Laptop.</li>
+                  <li> After That, You Have to Move Your Right Wrist in a Ascending or Descending order.</li>
+                  <li> Then You Press the Play Button to Play the Game.</li>
+                <li>The Red Paddle is the Your Paddle</li> </ol>
             </div>
           </div>
         </div>
